k8s/argocd/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.devops.com`)
      kind: Rule
      middlewares:
        - name: argocd-forwarded-headers

      services:
        - name: argocd-server
          port: 80
          scheme: http
  tls:
    secretName: argocd-tls
